--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-html, body, .container-fluid {
+html, body {
   height: 100%;
   /*background-color: #111;*/
 }
@@ -6,8 +6,4 @@ html, body, .container-fluid {
 html {
   /* This allows the window to be dragged when the hidden-inset option is used */
   -webkit-app-region: drag;
-}
-
-.container-fluid {
-  padding-top: 25px;
 }
