--- a/src/public/css/toggle-switch.css
+++ b/src/public/css/toggle-switch.css
@@ -81,3 +81,8 @@ input:checked + .slider:before {
   border-radius: 50%;
 
 }
+
+#allCourses-btn, #search-btn, #search-input{
+	margin-left: 5px; 
+}
+
