--- a/src/public/css/toggle-switch.css
+++ b/src/public/css/toggle-switch.css
@@ -98,4 +98,11 @@ input:checked + .slider:before {
 
 #navBar-Id{
 	max-height: 100px;
+	background-color: rgba(103, 162, 220, 1);
+}
+
+#header-img-id{
+	height="70px";
+	margin-top: -18px; 
+	padding-top: 10px;
 }
